# vue3-fastapi-admin

./: .gitignore  AGENTS.md  README.md  TOKEN_REFRESH_DESIGN.md  TOKEN_REFRESH_IMPLEMENTATION.md  pyproject.toml  tmp_menu_list.json  tmp_menus_processed.json
app/: Makefile  main.py  pyproject.toml  run.py
app/agents/: audit.py  identity.py  orchestrator.py  ratelimit.py  rbac.py  session.py  token.py
app/core/: audit_actions.py  auth.py  database.py  errors.py  logging.py  redis.py  responses.py  security.py  settings.py  trace.py
app/middleware/: auth.py  trace.py
app/migrations/models/: 0_20251111173435_init.py
app/models/: audit.py  base.py  department.py  menu.py  role.py  types.py  user.py
app/repositories/: department_repository.py  menu_repository.py  role_repository.py  user_repository.py
app/routers/: audit.py  auth.py  department.py  menu.py  role.py  user.py
app/schemas/: audit.py  auth.py  menu.py  role.py  user.py
app/settings/: config.py
database/: drop_all.sql  schema.sql  seed.sql
scripts/: apply_sql.py
tests/: conftest.py  test_auth.py
web/: .env.dev  pnpm-lock.yaml
web/mock/menu/: index.mock.ts
web/src/api/audit/: index.ts
web/src/api/department/: index.ts  types.ts
web/src/api/login/: index.ts  types.ts
web/src/api/menu/: index.ts
web/src/api/role/: index.ts
web/src/axios/: config.ts  index.ts  service.ts
web/src/directives/permission/: hasPermi.ts
web/src/locales/: en.ts  zh-CN.ts
web/src/router/: index.ts
web/src/store/modules/: user.ts
web/src/utils/: formatTime.ts
web/src/views/Function/: Test.vue
(+13 files in other folders)
